<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="echomachine.com.flickrapi_v1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_selected"
            app:destination="@id/navigation_selected" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="echomachine.com.flickrapi_v1.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="echomachine.com.flickrapi_v1.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="echomachine.com.flickrapi_v1.ui.profile.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="echomachine.com.flickrapi_v1.ui.profile.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_selected"
        android:name="echomachine.com.flickrapi_v1.ui.selected.SelectedFragment"
        android:label="@string/show_photo"
        tools:layout="@layout/fragment_selected"/>

    <fragment
        android:id="@+id/navigation_liked"
        android:name="echomachine.com.flickrapi_v1.ui.like.LikedFragment"
        android:label="@string/liked_fragment"
        tools:layout="@layout/fragment_liked" />

    <fragment
        android:id="@+id/navigation_offline"
        android:name="echomachine.com.flickrapi_v1.ui.home.OfflineFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_offline" />
</navigation>
