<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:labelFor="@string/register"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="echomachine.com.flickrapi_v1.ui.profile.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/indigo_daisy"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/tag"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/phone_number_register"
                android:inputType="phone"
                android:padding="15dp"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/register_progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:background="#EAD2D2"
                android:max="100"
                android:progress="20"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/register"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/login_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/indigo_daisy"
                android:gravity="center"
                android:text="@string/login_words"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="17sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>